force-app/main/default/objects/Invoice_Lines__c/Invoice_Lines__c.object-meta.xml
<CustomObject>
    <label>Invoice Lines</label>
    <nameField>
        <label>Line Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>