force-app/main/default/objects/Invoice_Lines__c/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <label>Initials</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>