force-app/main/default/objects/Invoice_Lines__c/fields/IntegrationID__c.field-meta.xml
<CustomField>
    <fullName>IntegrationID__c</fullName>
    <externalId>true</externalId>
    <label>IntegrationID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>