force-app/main/default/objects/Invoice_Lines__c/fields/InvoiceHeader__c.field-meta.xml
<CustomField>
    <fullName>InvoiceHeader__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Invoice Headers</label>
    <referenceTo>Orders__c</referenceTo>
    <relationshipLabel>Invoice Lines</relationshipLabel>
    <relationshipName>Invoice_Lines1</relationshipName>
    <type>Lookup</type>
</CustomField>