force-app/main/default/objects/Invoice_Lines__c/fields/TransDate__c.field-meta.xml
<CustomField>
    <fullName>TransDate__c</fullName>
    <label>TransDate</label>
    <type>DateTime</type>
</CustomField>